Correction Alignement Wikidata (ajout d'un élément pour les agents)